--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "body-parser": "^1.20.2",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
+    "google-spreadsheet": "^4.1.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +24,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,5 +33,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "typescript": "^5"
-  }
+  },
+  "description": "Avanço e Aprimoramento da Plataforma de Empoderamento para as Embaixadoras: Desenvolvendo um ambiente inovador e inclusivo para capacitar e conectar as embaixadoras, impulsionando assim a colaboração, a comunicação e o impacto positivo em nossa comunidade.🤖",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
